@@ -24,6 +24,7 @@ Attachments are now processed in the order they were attached.
 == CHANGELOG ==
 = 1.5.4 (future) =
 * Fixed bug where replies were getting attached to the wrong post
+* Fixed bug where tags were not being detected correctly in html emails
 
 = 1.5.3 (2013.04.13) =
 * Added support for Featured Images
